# psychological-tests-app

./: .gitignore  CMakeLists.txt  README.md  main.cpp  menu.txt  new_test_file
testsfiles/: anxiety.txt  attention.txt  decision.txt  emotional.txt  personality.txt  stress.txt
